
syntax = "proto3";

package com.events;

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
  rpc FindAllEvents(FindAllEventsRequest) returns (FindAllEventsResponse) {}
  rpc FindOneEvent(FindOneEventRequest) returns (FindOneEventResponse) {}
}

message CreateEventRequest {
  string tenantId = 1;
  string eventName = 2;
  string exchangeName = 3;
}

message Event {
  string tenantId = 2;
  string eventName = 3;
  string exchangeName = 4;
}

message CreateEventResponse {
  Event event = 1;
}

message FindAllEventsRequest {}

message FindAllEventsResponse {
  repeated Event event = 1;
}

message FindOneEventRequest {
  string tenantId = 1;
}

message FindOneEventResponse {
  Event event = 1;
}
